# Egaroucid

./: .gitattributes  .gitignore  CITATION.cff  CMakeLists.txt  Egaroucid.code-workspace  Egaroucid.sln  Egaroucid.vcxproj  Egaroucid.vcxproj.filters  Egaroucid_for_Console.sln  Egaroucid_for_Console.vcxproj  Egaroucid_for_Console.vcxproj.filters  Egaroucid_web_compile_cmd.txt  Info.plist  README.md  chinese.json  head_append.html  icon.icns  usage.html  usage.md  usage_ja.html  usage_ja.md
src/: CMakeLists.txt  Egaroucid.cpp  Egaroucid_console.cpp  Egaroucid_for_Console.cpp  Egaroucid_for_Console_line_searcher.cpp  Egaroucid_for_Web.cpp  Egaroucid_for_Web_compile_cmd.txt  Egaroucid_light.cpp  Egaroucid_web.cpp  Egaroucid_web_compile.py  Egaroucid_web_compile_cmd.txt  Main.cpp  Main_old.cpp  README.md  ai.hpp  all.hpp  bit.hpp  bit_simd_free.hpp  board.hpp  board_test.cpp  book.hpp  book_enlarge.hpp  book_learn.hpp  book_learn_old.hpp  clogsearch.hpp  common.hpp  cuda_board.hpp  cuda_endsearch.hpp  cuda_kernel.cu  cuda_midsearch.hpp  cuda_ybwc.hpp  egaroucid5.cpp  egaroucid5module.cpp  egaroucid_vs_edax.py  endsearch.hpp  endsearch_common.hpp  endsearch_human.hpp  endsearch_nws.hpp  endsearch_test.cpp  evaluate.hpp  (+53 more)
src/console/: advice.hpp  board_info.hpp  close.hpp  command.hpp  command_definition.hpp  commandline_option.hpp  commandline_option_definition.hpp  console_all.hpp  console_common.hpp  function.hpp  ggs.hpp  gtp_command.hpp  gtp_command_definition.hpp  info.hpp  option.hpp  print.hpp  state.hpp  url.hpp  util.hpp  version.hpp
src/engine/: README.md  ai.hpp  bit.hpp  bit_avx2.hpp  bit_common.hpp  bit_generic.hpp  bit_normal.hpp  bit_simd.hpp  board.hpp  book.hpp  book_accuracy.hpp  book_enlarge.hpp  book_legacy.hpp  clogsearch.hpp  common.hpp  const.hpp  contest_book.hpp  endsearch.hpp  endsearch_common.hpp  endsearch_last_generic.hpp  endsearch_last_simd.hpp  endsearch_nws.hpp  endsearch_nws_last_generic.hpp  endsearch_nws_last_simd.hpp  endsearch_nws_simd.hpp  endsearch_simd.hpp  engine_all.hpp  etc.hpp  evaluate.hpp  evaluate_common.hpp  evaluate_common_7_4.hpp  evaluate_experiment_7_7_fm_common.hpp  evaluate_experiment_7_7_fm_fast_common.hpp  evaluate_experiment_7_7_fm_grouped_common.hpp  evaluate_experiment_7_7_fm_simdopt_common.hpp  evaluate_experiment_7_7_fm_simdopt_mmap_common.hpp  evaluate_experiment_current_fm_common.hpp  evaluate_experiment_current_fm_cross_type_common.hpp  evaluate_experiment_current_fm_dual_type_common.hpp  evaluate_experiment_current_fm_dual_type_phase_weight_common.hpp  (+140 more)
src/engine/thread_pool/: thread_pool_ctpl.hpp
src/ffotest/: 43.txt  56.txt  59.txt
src/flip_variation/: around.hpp  flipping.hpp  position.hpp  stone.hpp
src/function/: menu.hpp  preference.hpp
src/gui/: COPILOT_NOTES.md  ai_loss_graph_setting_scene.hpp  ai_profile_scene.hpp  board_image.hpp  book.hpp  book_scene.hpp  button.hpp  close.hpp  close_scene.hpp  data_migration_scene.hpp  display_profile_scene.hpp  draw.hpp  game_editor_scene.hpp  game_information.hpp  graph.hpp  graph_human_sense.hpp  gui.hpp  gui_all.hpp  gui_common.hpp  input.hpp  input_scene.hpp  language.hpp  load.hpp  load_scene.hpp  main_scene.hpp  menu.hpp  mouse_additional_button_setting_scene.hpp  opening_setting_scene.hpp  opening_setting_scene_old.hpp  output.hpp  output_scene.hpp  pulldown.hpp  save_location_picker_scene.hpp  screen_shot.hpp  shortcut_button_setting_scene.hpp  shortcut_key_setting.hpp  shortcut_key_setting_scene.hpp  silent_load.hpp  silent_load_scene.hpp  update_check_scene.hpp  (+2 more)
src/gui/function/: ai_profile.hpp  button.hpp  click.hpp  data_migration.hpp  display_profile.hpp  explorer.hpp  function_all.hpp  graph.hpp  gui_common.hpp  input.hpp  language.hpp  level.hpp  list.hpp  menu.hpp  menu_definition.hpp  mouse_additional_button.hpp  opening.hpp  opening_gui.hpp  opening_manager.hpp  radio_button.hpp  scroll.hpp  shortcut_button.hpp  shortcut_key.hpp  shortcut_setting_common.hpp  slidebar.hpp  url.hpp  util.hpp  version.hpp
src/lib/: egaroucid_c_api.cpp
src/resources/: book.txt  book_big.txt  book_change.txt  joseki.txt  line_distance.txt  move_ordering.egmo  settings.txt
src/resources/languages/: english.json  japanese.json
src/resources/legacy/: param_5.txt  param_small.txt
src/test/: Egaroucid6_test.cpp  ai.cpp  board.cpp  book.cpp  close_quest.txt  create_neighbor.cpp  evaluate.cpp  ffotest.cpp  ffotest.py  hash.cpp  mobility.cpp  play_auto_many.py  several_test.cpp
src/test/languages/: english.json  japanese.json
src/test/resources/: settings.txt
src/thread_pool/: thread_pool.hpp
src/tools/book_to_line/: README.md  book_to_line.cpp  book_to_line_min_umigame.cpp  book_to_line_unique_boards.cpp  order_transcript.py
src/tools/check_line_book/: check_line_book_edax.cpp
src/tools/convert_board_data/: README.md  all_expand_board_2.py  all_expand_transcript.py  all_expand_transcript_with_starting_board.py  board_data_processing.cpp  board_data_processing2.cpp  expand_transcript.cpp  expand_transcript_with_starting_board.cpp
src/tools/cut_transcript/: README.md  cut_transcript.py
src/tools/diagnostics/: README_shortcut_diagnostics.md  collect_input_env.ps1  run_clipboard_path_diag.ps1  run_key_latency_probe.ps1  run_legacy_input_diag.ps1  run_shortcut_focus_recovery_diag.ps1  run_shortcut_vk_diag.ps1
src/tools/endsearch_statistics/: README.md  complete_search_test.py  endgame_search_test.py  format_problems.py  genproblem.py
src/tools/enumerate_ggs_random_boards/: README.md  random_setup.cpp  random_setup_2.cpp  random_setup_2_random.cpp
src/tools/enumerate_lines/: README.md  enumerate_all_boards.cpp  enumerate_all_lines.cpp  shuffle.py
src/tools/enumerate_random_boards/: README.md  random_setup.cpp  shuffle.py  (+2 more)
src/web/: ai.hpp  bit.hpp  board.hpp  book.hpp  book_const.hpp  bookrw.hpp  common.hpp  embed_book.cpp  endsearch.hpp  evaluate.hpp  evaluate_const.hpp  flip.hpp  last_flip.hpp  level.hpp  main.cpp  midsearch.hpp  mobility.hpp  move_ordering.hpp  probcut.hpp  search.hpp  setting.hpp  stability.hpp  transpose_table.hpp  util.hpp
(+2186 files in other folders)
